[refactor] Fix font alignment

--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -335,7 +335,7 @@
 			position: absolute;
 			left: 10%;
 			font-size:14px;
-			font-weight: bold;
+			/*font-weight: bold;*/
 			color: #c4c4c4;
 			width: 80%;
 		}
