--- a/AWS_Website/www_static/css/bootstrap.css
+++ b/AWS_Website/www_static/css/bootstrap.css
@@ -3737,7 +3737,7 @@ select[multiple].input-sm,
 .input-group-lg > .input-group-btn > .btn {
   height: 46px;
   padding: 10px 16px;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 1.33;
   border-radius: 6px;
   width: 90%;
